2011-06-12  Glenn Morris  <rgm@gnu.org>

	* progmodes/fortran.el (fortran-mode-syntax-table):
	* progmodes/f90.el (f90-mode-syntax-table):
	Set % to punctuation.  (Bug#8820)
	(f90-find-tag-default): Remove, no longer needed.

2011-06-12  Daniel Colascione  <dan.colascione@gmail.com>

	* emacs-lisp/syntax.el (syntax-ppss): Clarify which items are invalid.

2011-06-11  Chong Yidong  <cyd@stupidchicken.com>

	* image.el (image-animated-p): Return animation delay in seconds.
	Avoid bit manipulation in Lisp; use `delay' entry in the metadata.
	(image-animate-timeout): Remove DELAY argument.  Don't assume
	every subimage has the same delay; get it from image-animated-p.
	(image-animate): Caller changed.

2011-06-11  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-debug-message): Add `tramp-with-progress-reporter'
	to ignored backtrace functions.

2011-06-11  Glenn Morris  <rgm@gnu.org>

	* calendar/appt.el (appt-disp-window-function): Doc fix.
	(appt-check): Handle overlapping appointments.  (Bug#8337)

2011-06-11  Martin Rudalics  <rudalics@gmx.at>

	* window.el (window-tree-1, window-tree): New functions, moving
	the latter to window.el.
	(bw-get-tree, bw-get-tree-1, bw-find-tree-sub)
	(bw-find-tree-sub-1, bw-l, bw-t, bw-r, bw-b, bw-dir, bw-eqdir)
	(bw-refresh-edges): Remove.
	(balance-windows-1, balance-windows-2): New functions.
	(balance-windows): Rewrite in terms of window tree functions,
	balance-windows-1 and balance-windows-2.
	(bw-adjust-window): Remove.
	(balance-windows-area-adjust): New function with functionality of
	bw-adjust-window but using resize-window.
	(set-window-text-height): Rewrite doc-string.  Use
	normalize-live-window and resize-window.
	(enlarge-window-horizontally, shrink-window-horizontally): Rename
	argument to DELTA.
	(window-buffer-height): New function.
	(fit-window-to-buffer, shrink-window-if-larger-than-buffer):
	Rewrite using new window resize routines.
	(kill-buffer-and-window, mouse-autoselect-window-select): Use