@@ -1,3 +1,13 @@
+2011-06-12  Martin Rudalics  <rudalics@gmx.at>
+
+	* window.el (window-safely-shrinkable-p): Restore function which
+	was inadvertently removed in change from 2011-06-11.  Declare as
+	obsolete.
+
+	* calendar/calendar.el (calendar-generate-window): Use
+	window-iso-combined-p instead of combination of one-window-p and
+	window-safely-shrinkable-p.
+
 2011-06-12  Glenn Morris  <rgm@gnu.org>
 
 	* progmodes/fortran.el (fortran-mode-syntax-table):
